# z2p-newsletter

./: Cargo.toml  Dockerfile
scripts/: init_db.sh
src/: configuration.rs  domain.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: routes.rs
